--- a/css/style.css
+++ b/css/style.css
@@ -9,27 +9,39 @@ html {
     font-size: 62.5%;
 } 
 
-.video-container {
-    position: absolute;
-    z-index: -100;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: calc( 100vw * 1.3);
+header {
+    /* height: 90vh    ; */
     overflow: hidden;
 }
 
-.video-container video {
-    position: absolute;
+/* .container-fluid {
+    padding-left: 0%;
+    padding-right: 0%;
+} */
+
+.video-container {
+    position: relative;
+    z-index: -100;
     top: 0;
     left: 0;
     width: 100vw;
-    opacity: 85%;
+    /* height: calc( 100vw * 1.3); */
+    /* height: 100vh; */
+    overflow: hidden;
 }
 
-.navbar-brand {
-    font-size: 5rem;
+
+.video-container video {
+    position: relative;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    opacity: 85%;    
 }
+
+/* .navbar-brand {
+    font-size: 5rem;
+} */
 
 /* .bg-dark li:hover {
     background-color: white;
