--- a/css/style.css
+++ b/css/style.css
@@ -19,25 +19,37 @@ header {
     padding-right: 0%;
 } */
 
+.navbar__sizemod {   
+    font-size: 5rem;
+}
 .video-container {
-    position: relative;
-    z-index: -100;
-    top: 0;
-    left: 0;
     width: 100vw;
     /* height: calc( 100vw * 1.3); */
     /* height: 100vh; */
     overflow: hidden;
 }
 
-
 .video-container video {
-    position: relative;
-    top: 0;
-    left: 0;
     width: 100vw;
-    opacity: 85%;    
+    opacity: 85%; 
+    overflow: hidden;
 }
+
+.centerimg {
+    display: flex;
+    justify-content: center;
+}
+
+/* .centerimg img {
+    height: 20rem;
+} */
+
+.container__text {
+    font-size: 5rem;
+    margin-top: 10rem;
+    text-align: center;
+}
+
 
 /* .navbar-brand {
     font-size: 5rem;
