--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,3 @@
-
 * {
     margin: 0;
     padding: 0;
@@ -14,10 +13,9 @@ header {
     overflow: hidden;
 }
 
-/* .container-fluid {
-    padding-left: 0%;
-    padding-right: 0%;
-} */
+footer {
+    background-color: black;
+}
 
 .navbar__sizemod {   
     font-size: 5rem;
@@ -28,7 +26,11 @@ header {
     /* height: 100vh; */
     overflow: hidden;
 }
-
+.courusel__img--size {
+    width: 100%;
+    max-height: 70rem;
+    max-width: 52.5rem;
+}
 .video-container video {
     width: 100vw;
     opacity: 85%; 
@@ -40,27 +42,42 @@ header {
     justify-content: center;
 }
 
-/* .centerimg img {
-    height: 20rem;
-} */
 
 .container__text {
     font-size: 5rem;
-    margin-top: 10rem;
+    /* margin-top: 10rem;
+    margin-bottom: 10rem; */
     text-align: center;
+    margin: 10rem 4rem 10rem 4rem;
 }
 
+.corousel__img { 
+    display: block;
+    margin: 0 auto;
+}
 
-/* .navbar-brand {
+.carousel__title {
     font-size: 5rem;
-} */
-
-/* .bg-dark li:hover {
-    background-color: white;
-    color: black;
+    color: white;
+    font-weight: bold
 }
 
-.bg-dark li a{
-    color: black;
-} */
+.carousel__text {
+    font-size: 3rem;
+    color: white;
+    font-weight: bold
+}
+
+.footer__tittle--mod {
+    font-size: 3rem;
+    color: snow;
+}
+
+.footer__redes {
+    width: 4rem;
+    
+}
+
+
+
 
