creando segundo html responsive con grid y medias - backup antes de rama nosotros__grid

--- a/css/style.css
+++ b/css/style.css
@@ -77,6 +77,14 @@ footer {
     width: 4rem;
 }
 
+.article__img {
+    max-width: 60rem;
+}
 
-
+.grid {
+    grid-template-areas: 
+    "portada portada portada"
+    "article1 article2 aside"
+    "foto foto aside";
+}
 
