--- a/css/style.css
+++ b/css/style.css
@@ -8,9 +8,14 @@ html {
     font-size: 62.5%;
 } 
 
+
 header {
     /* height: 90vh    ; */
     overflow: hidden;
+}
+
+main {
+    width: 100vw;
 }
 
 footer {
@@ -77,14 +82,117 @@ footer {
     width: 4rem;
 }
 
-.article__img {
-    max-width: 60rem;
-}
-
+/* nosotros.html*/
 .grid {
+    margin: 10rem 1rem 1rem 1rem;
+    display: grid;
     grid-template-areas: 
-    "portada portada portada"
-    "article1 article2 aside"
-    "foto foto aside";
+    "portada portada aside"
+    "article1 article1 aside"
+    "article2 article2 aside"
+    "boton boton boton";
+    grid-template-columns: 0.3fr 3fr 0.6fr;
+    grid-template-rows: .7fr 1fr 1fr .8fr;
+    grid-column-gap: 1rem;
+    grid-row-gap: 1rem;
 }
 
+.grid__portada {
+    grid-area: portada;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
+.grid__portada img{
+    max-width: 60%;
+    max-height: 60%;
+}
+
+.grid__article1 {
+    grid-area: article1;
+    background-color: #D9B26E;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.article__img {
+    max-width: 35%;
+    max-height: auto;
+    margin: 3rem;
+}
+
+.grid__article2 {
+    grid-area: article2;
+    background-color: #654534;
+    display: flex;
+    flex-direction: column;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+}
+
+.grid__article--text {
+    font-size: 2rem;
+    margin: 3rem;
+    text-align: center;
+}
+.grid__article--title {
+    font-size: 4rem;
+    margin: 3rem;
+}
+
+.grid__aside {
+    grid-area: aside;
+    background-color: #3D322C;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-items: center;
+    text-align: center;
+    align-items: center;
+    font-weight: 800;
+    text-transform: uppercase;
+}
+
+.grid__aside--textvertical {    
+
+    writing-mode: vertical-rl;
+    font-size: 5rem;
+    color: white;
+    width: 100%;
+    letter-spacing: 1.5rem;
+}
+
+
+.divboton {
+    grid-area: boton;
+    text-align: center;
+    margin: 10rem;
+    display: flex;
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
+    align-items: center;
+    
+    
+}
+
+.divboton__botoncontacto {
+    background-color: dimgray;
+    display: block;
+    /* margin: 2rem; */
+    font-size: 5rem;
+    text-decoration: none;
+    color: white;
+    padding: 3rem;
+    border-radius: 5rem;
+}
+
+.divboton a:hover {
+    color: #3D322C;
+    transform: translate(1rem, -1rem);
+}
