--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,4 @@
+/* globales */
 * {
     margin: 0;
     padding: 0;
@@ -22,6 +23,7 @@ footer {
     background-color: black;
 }
 
+/* index.html */
 .navbar__sizemod {   
     font-size: 5rem;
 }
@@ -50,8 +52,6 @@ footer {
 
 .container__text {
     font-size: 5rem;
-    /* margin-top: 10rem;
-    margin-bottom: 10rem; */
     text-align: center;
     margin: 10rem 4rem 10rem 4rem;
 }
@@ -123,6 +123,11 @@ footer {
     max-width: 35%;
     max-height: auto;
     margin: 3rem;
+    border-radius: 2rem;
+}
+
+.shadowimg {
+    box-shadow: 1rem 1rem 1rem#3D322C;
 }
 
 .grid__article2 {
@@ -133,6 +138,7 @@ footer {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    box-shadow: 1rem 1rem 1rem#3D322C;
 }
 
 .grid__article--text {
@@ -140,6 +146,7 @@ footer {
     margin: 3rem;
     text-align: center;
 }
+
 .grid__article--title {
     font-size: 4rem;
     margin: 3rem;
@@ -151,22 +158,20 @@ footer {
     display: flex;
     flex-direction: row;
     flex-wrap: wrap;
-    justify-items: center;
-    text-align: center;
+    justify-content: center;
     align-items: center;
     font-weight: 800;
     text-transform: uppercase;
 }
 
 .grid__aside--textvertical {    
-
     writing-mode: vertical-rl;
     font-size: 5rem;
     color: white;
-    width: 100%;
     letter-spacing: 1.5rem;
+    align-self: center;
+    justify-self: center;
 }
-
 
 .divboton {
     grid-area: boton;
@@ -177,8 +182,6 @@ footer {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
-    
-    
 }
 
 .divboton__botoncontacto {
@@ -190,9 +193,93 @@ footer {
     color: white;
     padding: 3rem;
     border-radius: 5rem;
+    box-shadow: 4rem 4rem 1rem #3D322C;
 }
 
 .divboton a:hover {
     color: #3D322C;
     transform: translate(1rem, -1rem);
+}
+
+/* contacto.html */
+.formulario {
+    display: inline-block;
+    margin: 2rem;
+    font-family: 'Roboto', sans-serif;
+    border: solid 1rem #825F41;
+}
+
+.formulario legend {
+    font-size: 3rem;
+}
+
+.formulario input {
+    margin: 1rem;
+    padding: .3rem;
+}
+
+.formulario textarea {
+    margin: 1rem;
+}
+
+.formulario label {
+    margin: 1rem;
+    font-size: 1.5rem;
+}
+
+.formulario p {
+    margin: 1rem;
+}
+
+.botones input {
+    padding: 1rem;
+    background-color: #825F41;
+    border-radius: 1rem;
+    box-shadow: .1rem .1rem .6rem;
+}
+
+.botones input:hover {
+    transform: translate(.5rem, -.5rem);
+}
+
+.fondoMain {
+    background-image: url(../img/neoprene.jpg);
+    background-position: right;
+    background-repeat: no-repeat;
+    margin-top: 10rem;
+}
+
+
+.sosmayorista legend {
+    font-size: 2rem;
+}
+
+.sosmayorista {
+    margin: 1rem;
+}
+
+/* ubicacion.html */
+
+.fondoMain2 {
+    background-image: url(../img/cartel.jpg);
+    background-position: right;
+    background-repeat: no-repeat;
+    margin-top: 10rem;
+}
+
+.descripcionMapa h2 {
+    font-size: 3rem;
+}
+
+.descripcionMapa__iframe {
+    text-align: center;
+    margin: 4rem;
+    border: solid 1rem #825F41;
+    padding: 1rem;
+    display: inline-block;
+}
+
+.descripcionMapa__texto {
+    margin: 4rem 4rem 0rem 4rem;
+    line-height: 3rem;
 }
