--- a/css/style.css
+++ b/css/style.css
@@ -11,7 +11,6 @@ html {
 
 
 header {
-    /* height: 90vh    ; */
     overflow: hidden;
 }
 
@@ -31,6 +30,7 @@ footer {
 .video-container {
     width: 100vw;
     overflow: hidden;
+    margin-top: 9rem;
 }
 
 .courusel__img--size {
@@ -82,16 +82,25 @@ footer {
     width: 4rem;
 }
 
+@media screen and (max-width: 500px) {
+    .navbar__sizemod {   
+        font-size: 3rem;
+    }
+    .video-container {
+        margin-top: 6rem;
+    }
+}
+
 /* nosotros.html*/
-.grid {
+#grid {
     margin: 10rem 1rem 1rem 1rem;
     display: grid;
     grid-template-areas: 
-    "portada portada aside"
-    "article1 article1 aside"
-    "article2 article2 aside"
-    "boton boton boton";
-    grid-template-columns: 0.3fr 3fr 0.6fr;
+        "portada portada aside"
+        "article1 article1 aside"
+        "article2 article2 aside"
+        "boton boton boton";
+    grid-template-columns: 3fr 1fr 1fr;
     grid-template-rows: .7fr 1fr 1fr .8fr;
     grid-column-gap: 1rem;
     grid-row-gap: 1rem;
@@ -117,6 +126,7 @@ footer {
     flex-wrap: wrap;
     justify-content: center;
     align-items: center;
+    box-shadow: 1rem 1rem 1rem#3D322C;
 }
 
 .article__img {
@@ -162,13 +172,14 @@ footer {
     align-items: center;
     font-weight: 800;
     text-transform: uppercase;
+    box-shadow: 1rem 1rem 1rem#3D322C;
 }
 
 .grid__aside--textvertical {    
-    writing-mode: vertical-rl;
-    font-size: 5rem;
+    writing-mode: vertical-rl; 
+    font-size: 5rem; 
+    letter-spacing: 1.5rem; 
     color: white;
-    letter-spacing: 1.5rem;
     align-self: center;
     justify-self: center;
 }
@@ -187,7 +198,7 @@ footer {
 .divboton__botoncontacto {
     background-color: dimgray;
     display: block;
-    /* margin: 2rem; */
+    margin: 2rem auto;
     font-size: 5rem;
     text-decoration: none;
     color: white;
@@ -201,12 +212,49 @@ footer {
     transform: translate(1rem, -1rem);
 }
 
+@media screen and (max-width: 768px) {
+    #grid {
+        grid-template-areas: 
+            "portada portada portada"
+            "article1 article1 article1"
+            "article2 article2 article2"
+            "aside aside aside"
+            "boton boton boton";
+        grid-template-columns: 3fr;
+        grid-template-rows: .7fr 1fr 1fr .4fr .8fr;
+    }
+
+    .grid__aside {
+        box-shadow: 1rem 1rem 1rem gray;
+    }
+
+    .grid__aside--textvertical {    
+        writing-mode: unset; 
+        font-size: 2rem; 
+        text-align: center;
+    }
+}
+
+@media screen and (max-width: 560px) {
+    .divboton__botoncontacto {
+        font-size: 2rem;
+    }
+}
+
+@media screen and (max-width: 360px) {
+    .divboton__botoncontacto {
+        font-size: 1rem;
+    }
+}
+
+
 /* contacto.html */
 .formulario {
     display: inline-block;
     margin: 2rem;
     font-family: 'Roboto', sans-serif;
     border: solid 1rem #825F41;
+    width: 60vw    ;
 }
 
 .formulario legend {
@@ -220,6 +268,7 @@ footer {
 
 .formulario textarea {
     margin: 1rem;
+    width: 90%;
 }
 
 .formulario label {
@@ -249,7 +298,6 @@ footer {
     margin-top: 10rem;
 }
 
-
 .sosmayorista legend {
     font-size: 2rem;
 }
@@ -258,7 +306,21 @@ footer {
     margin: 1rem;
 }
 
+@media screen and (max-width: 1000px) {
+    .fondoMain {
+        background-image: none;
+    }
+
+    .formulario {
+        width: 80vw    ;
+    }
+}
+
 /* ubicacion.html */
+iframe {
+    width: 40vw;
+    
+}
 
 .fondoMain2 {
     background-image: url(../img/cartel.jpg);
@@ -282,4 +344,23 @@ footer {
 .descripcionMapa__texto {
     margin: 4rem 4rem 0rem 4rem;
     line-height: 3rem;
+}
+
+@media screen and (max-width: 1100px) {
+    iframe {
+        width: 80vw;
+    }
+
+    .fondoMain2 {
+        background-image: none;
+    }
+}
+
+/* productos.html */
+.card img {
+    max-width: 30vw;
+}
+
+.conteinercard {
+    margin-top: 10rem;
 }
