--- a/css/style.css
+++ b/css/style.css
@@ -362,5 +362,24 @@ iframe {
 }
 
 .conteinercard {
+    /* margin: 15rem 5rem 5rem 5rem;
+    width: 90vw; */
     margin-top: 10rem;
+}
+
+.conteinercard2 {
+    /* margin: 15rem 5rem 5rem 5rem;
+    width: 90vw; */
+    margin: 5rem;
+}
+
+.conteinercard2 img {
+    /* margin: 15rem 5rem 5rem 5rem;
+    width: 90vw; */
+    margin: 10%;
+}
+
+.textmod {
+    text-align: center;
+    margin-bottom: 3rem;
 }
